--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
 node_modules
+
+
+git add README.md
+git commit -m "first commit"
+git branch -M main
+git remote add origin https://github.com/jnc202/team-a.git
+git push -u origin main
