--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "gulp-clean-css": "^4.3.0",
+    "gulp-concat": "^2.6.1",
     "gulp-htmlmin": "^5.0.1",
     "gulp-rename": "^2.0.0",
-    "gulp-sass": "^4.1.0"
+    "gulp-sass": "^4.1.0",
+    "gulp-uglify": "^3.0.2",
+    "gulp-uglify-es": "^2.0.0",
+    "readable-stream": "^3.6.0"
   },
   "devDependencies": {
     "browser-sync": "^2.26.13",
